# roxy

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  pyrightconfig.json  rustfmt.toml
.config/: config.json  config.json5
.github/workflows/: ci.yml  deploy-book.yml
book/: book.toml
book/book/: 404.html  getting-started.html  index.html  print.html  searchindex.js  toc.html  toc.js
book/book/dev/: index.html  specs.html  testing.html
book/book/dev/specs/: headers.html  request.html  response.html
book/book/scripting/: flows.html  headers.html  index.html  notify.html  query.html  request.html  response.html
book/src/: SUMMARY.md  certificates.md  getting-started.md
book/src/dev/: README.md
book/src/dev/specs/: headers.md
book/src/scripting/: README.md  body.md  constants.md  flows.md  headers.md  notify.md  url.md
cli/: Cargo.toml
cli/src/: app.rs  config.rs  event.rs  lib.rs  logging.rs  main.rs  tui.rs
cli/src/ui/: config_editor.rs  home.rs  log.rs  mod.rs  quit_popup.rs  splash.rs
cli/src/ui/flow/: csv.rs  flow_body.rs  flow_certs.rs  flow_details.rs  flow_headers.rs  flow_list.rs  flow_request.rs  flow_response.rs  flow_timing.rs  html.rs  json.rs  markdown.rs  mod.rs  tab.rs  toml.rs  ws_details.rs  xml.rs  yaml.rs
cli/src/ui/framework/: cache.rs  component.rs  notify.rs  theme.rs
dev-server/: Cargo.toml
dev-server/assets/: test.csv  test.tsv
dev-server/src/: main.rs
http3-cli/: Cargo.toml
http3-cli/src/: lib.rs  main.rs
include/: roxy-proxy.h
kmp/: build.gradle.kts  detekt.yml  settings.gradle.kts
kmp/buildSrc/src/main/kotlin/: Config.kt
kmp/composeApp/: build.gradle.kts
kmp/composeApp/src/androidMain/kotlin/io/fergdev/roxy/: MainActivity.kt  Platform.android.kt
kmp/composeApp/src/commonMain/kotlin/io/fergdev/roxy/: App.kt  Greeting.kt  Platform.kt  Theme.kt
kmp/composeApp/src/commonTest/kotlin/io/fergdev/roxy/: ComposeAppCommonTest.kt
kmp/composeApp/src/iosMain/kotlin/io/fergdev/roxy/: MainViewController.kt  Platform.ios.kt
kmp/composeApp/src/jvmMain/kotlin/io/fergdev/roxy/: Platform.jvm.kt  main.kt
kmp/composeApp/src/wasmJsMain/kotlin/io/fergdev/roxy/: Platform.wasmJs.kt  main.kt
kmp/composeApp/src/wasmJsMain/resources/: index.html
kmp/gradle/: libs.versions.toml
kmp/iosApp/Configuration/: Config.xcconfig
kmp/iosApp/iosApp.xcodeproj/: project.pbxproj
lua/: roxy.lua
proxy/: Cargo.toml  cbindgen.toml
proxy/benches/: test_bench.rs
proxy/script_libs/js/: READEME.md  index.d.ts  index.js  package.json  roxy.d.ts
proxy/script_libs/lua/: roxy-0.1.0-1.rockspec  roxy-scripting-0.1.0-1.rockspec  roxy.lua
proxy/script_libs/py/: .gitignore  __init__.py  pyproject.toml  roxy.py  roxy.pyi
proxy/src/: cert.rs  ffi.rs  flow.rs  h1.rs  h2.rs  h3.rs  http.rs  interceptor.rs  lib.rs  peek_stream.rs  peekable_duplex.rs  proxy.rs  utils.rs  ws.rs
proxy/src/interceptor/: mod.rs  util.rs
proxy/src/interceptor/js/: body.rs  constants.rs  engine.rs  flow.rs  headers.rs  logger.rs  mod.rs  query.rs  request.rs  response.rs  url.rs  util.rs
proxy/src/interceptor/lua/: body.rs  constants.rs  engine.rs  flow.rs  headers.rs  mod.rs  query.rs  request.rs  response.rs  url.rs  util.rs
proxy/src/interceptor/py/: body.rs  constants.rs  engine.rs  extension.rs  flow.rs  headers.rs  mod.rs  notify.rs  query.rs  request.rs  response.rs  url.rs  writer.rs
proxy/tests/: basic_test.rs  int_test.rs  lib.rs  script_engine.rs
proxy/tests/script_engine/: body_cascade.js  body_cascade.lua  body_cascade.py  body_cascade_with_empty.js  body_cascade_with_empty.lua  body_cascade_with_empty.py  body_clear.js  body_clear.lua  body_clear.py  body_is_empty.js  body_is_empty.lua  body_is_empty.py  body_len.js  body_len.lua  body_len.py  body_set.js  body_set.lua  body_set.py  body_sub.js  body_sub.lua  body_sub.py  empty.js  empty.lua  empty.py  header_append.js  header_append.lua  header_append.py  header_clear.js  header_clear.lua  header_clear.py  header_delete.js  header_delete.lua  header_delete.py  header_has.js  header_has.lua  header_has.py  header_length.js  header_length.lua  header_length.py  header_set.js  (+116 more)
rurl/: Cargo.toml
rurl/src/: main.rs
scripts/: change-host.lua  logger.lua  notify.lua  rewrite-response.lua
servers/: Cargo.toml
servers/assets/: test.html  test.oct  test.yaml
servers/src/: h1.rs  h2.rs  h3.rs  lib.rs  main.rs  serve.rs  web_transport.rs  ws.rs
shared/: Cargo.toml
shared/src/: alpn.rs  body.rs  cert.rs  client.rs  content.rs  crypto.rs  h3_client.rs  http.rs  io.rs  lib.rs  tls.rs  uri.rs  util.rs  version.rs
src/: app.rs  app2.rs  certs.rs  config.rs  event.rs  flow.rs  interceptor.rs  lib.rs  logging.rs  main.rs  proxy.rs  tui.rs  ui.rs
src/proxy/: cert.rs  h1.rs  h2.rs  mod.rs  ws.rs
src/ui/: component.rs  config_editor.rs  flow_details.rs  flow_list.rs  fps_counter.rs  home.rs  key_popup.rs  log.rs  mod.rs  quit_popup.rs  splash.rs  theme.rs  toast.rs  util.rs
src/ui/flow/: csv.rs  flow_body.rs  flow_certs.rs  flow_details.rs  flow_headers.rs  flow_list.rs  flow_request.rs  flow_response.rs  flow_timing.rs  json.rs  markdown.rs  mod.rs  toml.rs  ws_details.rs  xml.rs  yaml.rs
src/ui/framework/: cache.rs  mod.rs  notify.rs  theme.rs  util.rs
test-server/: Cargo.toml
test-server/assets/: test.icns  test.json  test.md  test.toml  test.txt  test.xml
test-server/src/: main.rs
tests/: basic_test.rs
