[package]
name = "roxy"
version = "0.1.0"
description = "CLI proxy tool written in rust aka roxy (rust proxy)."
license = "MIT"
edition = "2024"

[dependencies]
itertools = { version = "0.14", default-features = false, features = [
  "use_alloc",
] }
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.31"
httparse = "1.10.1"
lazy_static = "1.5.0"
ratatui = { version = "0.29.0", features = [
  "serde",
  "macros",
  "unstable-widget-ref",
] }
rcgen = { version = "0.13.2", features = [
  "crypto",
  "ring",
  "pem",
  "x509-parser",
] }
rs-snowflake = "0.6.0"
rustls = { version = "0.23", features = ["tls12"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-tungstenite = { version = "0.27.0", features = ["__rustls-tls"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-segmentation = "1"
unicode-truncate = { version = "2", default-features = false }
webpki-roots = "1.0.1"
# See <https://github.com/ratatui/ratatui/issues/1271> for information about why we pin unicode-width
unicode-width = "=0.2.0"
anyhow = "1.0.85"
pkcs12 = "0.1.0"
once_cell = "1.19"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
notify = "8.0.0"
dirs = "6.0.0"
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.10.1"
http = "1"
http-body = "1"
x509-parser = { version = "0.17" }
dashmap = "6.1.0"
tui-big-text = "0.7.1"
serde = { version = "1.0.211", features = ["derive"] }
config = "0.15.0"
json5 = "0.4.1"
toml = "0.8.23"
derive_deref = "1.1.1"
strum = { version = "0.27.1", features = ["derive"] }
tokio-util = "0.7.12"
signal-hook = "0.3.17"
quiche = "0.24"
ring = "0.17"
mio = "1.0"
roxy-shared = { path = "shared" }


kuchiki = "0.8"
markup5ever = "0.35"
serde_json = "1"
ratatui-image = "8.0.1"
image = "=0.25.6"
base64 = "=0.22.1"
rat-focus = "1.0.2"
xmltree = "0.11.0"
toml_edit = "0.22.7"
serde_yaml = "0.9.27"
csv = "1.3"
pulldown-cmark = "0.13"

[dev-dependencies]
tempfile = "3.11.0"
warp = { version = "0.3.4", features = ["tls", "tokio-rustls"] }
reqwest = { version = "0.12.22", features = ["rustls-tls"] }
