[workspace]
resolver = "3"
members = ["proxy", "cli", "servers", "shared", "rurl"]

[workspace.dependencies]
dirs = "6.0.0"
once_cell = "1.19"
chrono = "0.4.41"
bytes = "1.10.1"
itertools = { version = "0.14", default-features = false, features = [
  "use_alloc",
] }
rcgen = { version = "0.14.1", default-features = false, features = [
  "crypto",
  "aws_lc_rs",
  "pem",
  "x509-parser",
] }
rustls = { version = "0.23", default-features = false, features = [
  "tls12",
  "aws_lc_rs",
] }

futures = "0.3.31"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"

# Tls
tokio-rustls = { version = "0.26.2", default-features = false, features = [
  "aws_lc_rs",
] }
tokio-tungstenite = { version = "0.27.0", features = ["__rustls-tls"] }

strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27"

# Tracing
tracing = "0.1"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Http
http = "1"
hyper = { version = "1.6.0", features = ["full"] }
http-body = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
h3 = { git = "https://github.com/fergdev/h3-wt-client", branch = "wt-client" }
h3-quinn = { git = "https://github.com/fergdev/h3-wt-client", branch = "wt-client", features = [
  "datagram",
  "tracing",
] }
h3-datagram = { git = "https://github.com/fergdev/h3-wt-client", branch = "wt-client" }
h3-webtransport = { git = "https://github.com/fergdev/h3-wt-client", branch = "wt-client" }
url = "2.5.4"

web-transport-quinn = { version = "0.7.3", default-features = false, features = [
  "ring",
] }
quinn = { version = "0.11", default-features = false, features = [
  "runtime-tokio",
  "rustls",
  "ring",
] }
quinn-proto = { version = "0.11", default-features = false, features = [
  "runtime-tokio",
  "rustls",
  "ring",
] }

# h3 = { path = "../../h3-wt-client/h3/" }
# h3-quinn = { path = "../../h3-wt-client/h3-quinn/" }
# h3-datagram = { path = "../../h3-wt-client/h3-datagram/" }
# h3-webtransport = { path = "../../h3-wt-client/h3-webtransport/" }

# h3 = "0.0.8"
# h3-quinn = "0.0.10"
# h3-datagram = "0.0.2"
# h3-webtransport = "0.1.2"

# Tls
aws-lc-rs = { version = "1", features = ["bindgen"] }
aws-lc-sys = { version = "0.30", features = ["bindgen"] }

serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1"


# Utils
cow-utils = "0.1.3"
