[package]
name = "roxy-cli"
version = "0.1.0"
description = "CLI proxy tool written in rust aka roxy (rust proxy)."
license = "MIT"
edition = "2024"

[dependencies]

# HTTP
rustls = { workspace = true }
hyper = { workspace = true }
x509-parser = "0.18.0"

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }

# Tui
ratatui = { version = "0.30.0", features = [
  "serde",
  "macros",
  "unstable-widget-ref",
] }
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
unicode-segmentation = "1"
unicode-truncate = { version = "2", default-features = false }
unicode-width = "=0.2.2" # See <https://github.com/ratatui/ratatui/issues/1271> for information about why we pin unicode-width
tui-big-text = "0.8.2"
rat-focus = "2.0.2"

# Util
cow-utils = { workspace = true }
notify = "8.2.0"
pkcs12 = { workspace = true }
once_cell = { workspace = true }
dirs = { workspace = true }
dashmap = "6.1.0"
derive_deref = "1.1.1"
strum = { workspace = true }
signal-hook = "0.4.3"
async-watcher = "0.4.0"
bytes = { workspace = true }
time = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
directories = "6.0.0"
rs-snowflake = "0.6.0"
image = "=0.25.9"

# Serde
serde = { workspace = true }
config = "0.15.16"
json5 = "1.3.1"
toml = "1.0.0"
kuchiki = "0.8"
markup5ever = "0.38"
serde_json = "1"
ratatui-image = { version = "10.0.6", features = [
  "image-defaults",
], default-features = false }
base64 = "=0.22.1"
xmltree = "0.12.0"
serde_yaml = "0.9.27"
csv = "1.3"
pulldown-cmark = "0.13"

# Shared
roxy-shared = { path = "../shared" }
roxy-proxy = { path = "../proxy" }
