[package]
name = "dev-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10"
futures-util = "0.3"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
quinn = "0.11"
rcgen = { version = "0.14", features = [
  "crypto",
  "ring",
  "pem",
  "x509-parser",
] }
ring = "0.17"
roxy-servers = { path = "../servers" }
roxy-shared = { path = "../shared" }
rustls = { version = "0.23", features = ["tls12"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-tungstenite = "0.27.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = { version = "0.3.4", features = ["tls", "tokio-rustls"] }
