[package]
name = "http3-cli"
version = "0.1.0"
edition = "2024"

[dependencies]

rcgen = { version = "0.14.1", features = [
  "crypto",
  "aws_lc_rs",
  "pem",
  "x509-parser",
] }
rustls-native-certs = "0.8"

rustls = { version = "0.23", features = ["tls12"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
anyhow = "1.0.85"
dirs = "6.0.0"
time = "0.3.41"
p12-keystore = "0.2.0"
rand = "0.9.1"

bytes = "1"
futures = "0.3"
http = "1"
http-body-util = "0.1"
quinn = { version = "0.11", default-features = false, features = [
  "runtime-tokio",
  "rustls",
  "ring",
] }
structopt = "0.3"
tokio = { version = "1.27", features = ["full"] }
octets = "0.3.0"

tracing-tree = { version = "0.4" }
h3 = "0.0.8"
h3-quinn = "0.0.10"
roxy-servers = { path = "../servers" }
roxy-shared = { path = "../shared" }
