[package]
name = "roxy-proxy"
version = "0.1.0"
description = "CLI proxy tool written in rust aka roxy (rust proxy)."
license = "MIT"
edition = "2024"

[dependencies]
itertools = { version = "0.14", default-features = false, features = [
  "use_alloc",
] }
# TODO: is this required
chrono = "0.4.41"
futures = "0.3.31"
rcgen = { version = "0.14.2", features = [
  "crypto",
  "ring",
  "pem",
  "x509-parser",
] }
rs-snowflake = "0.6.0"
rustls = { version = "0.23", features = ["tls12"] }

tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-tungstenite = { version = "0.27.0", features = ["__rustls-tls"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
webpki-roots = "1.0.1"
pkcs12 = "0.1.0"
once_cell = "1.19"
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "async"] }
dirs = "6.0.0"
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = { version = "0.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.10.1"
http = "1"
http-body = "1"
x509-parser = { version = "0.18" }
dashmap = "6.1.0"
derive_deref = "1.1.1"
strum = { version = "0.27.1", features = ["derive"] }
tokio-util = "0.7.12"
signal-hook = "0.3.17"
ring = "0.17"
roxy-shared = { path = "../shared" }

h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = { version = "0.11", default-features = false, features = [
  "runtime-tokio",
  "rustls",
  "ring",
] }
rustls-native-certs = "0.8"
flate2 = "1.0"

url = "2.5.4"
async-watcher = "0.3.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }
tempfile = "3.11.0"
roxy-servers = { path = "../servers" }

[[bench]]
name = "test_bench"
harness = false
