[package]
name = "roxy-proxy"
version = "0.1.0"
description = "CLI proxy tool written in rust aka roxy (rust proxy)."
license = "MIT"
edition = "2024"

[dependencies]
# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = "0.1.89"
futures-util = { workspace = true }

# Script
mlua = { version = "0.11.3", features = ["lua54", "vendored", "send"] }

boa_engine = { version = "0.20.0" }
boa_runtime = { version = "0.20.0" }
boa_interop = { version = "0.20.0" }
boa_gc = { version = "0.20.0" }
pyo3 = "0.26.0"


# Http
h3 = { workspace = true }
h3-quinn = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
quinn = { workspace = true }
url = { workspace = true }
tokio-tungstenite = { workspace = true }

# Shared
roxy-shared = { path = "../shared" }

# TLS
pkcs12 = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Util
bytes = { workspace = true }
dashmap = "6.1.0"
itertools = { workspace = true }
once_cell = { workspace = true }
rs-snowflake = "0.6.0"
strum = { workspace = true }
cow-utils = { workspace = true }
time = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }
tempfile = "3.22.0"
roxy-servers = { path = "../servers" }

# [[bench]]
# name = "test_bench"
# harness = false
