[package]
name = "rurl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
bytes = "1.10"
futures-util = "0.3"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
quinn = "0.11"
rcgen = { version = "0.14", features = [
  "crypto",
  "ring",
  "pem",
  "x509-parser",
] }
roxy-servers = { path = "../servers" }
roxy-shared = { path = "../shared" }
rustls = { version = "0.23", features = ["tls12"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-tungstenite = "0.27.0"
tracing = "0.1"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
once_cell = "1.19"

http-body-util = "0.1.3"
