[package]
name = "rurl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
bytes = { workspace = true }
futures-util = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
http = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
roxy-servers = { path = "../servers" }
roxy-shared = { path = "../shared" }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-tungstenite = { workspace = true }

tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
once_cell = { workspace = true }
http-body-util = { workspace = true }
