[package]
name = "roxy-servers"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
tokio-rustls = "0.26.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rcgen = { version = "0.14", features = [
  "crypto",
  "ring",
  "pem",
  "x509-parser",
] }
rustls = { version = "0.23", features = ["tls12"] }

warp = { version = "0.3.4", features = ["tls", "tokio-rustls"] }
ring = "0.17"


h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = { version = "0.11", default-features = false, features = [
  "runtime-tokio",
  "rustls",
  "ring",
] }
rustls-native-certs = "0.8"

bytes = "1.10"

http = "1"
roxy-shared = { path = "../shared" }
