[package]
name = "roxy-servers"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10"
futures-util = "0.3"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram", "tracing"] }
h3-datagram = "0.0.2"
http = "1"
quinn = { workspace = true }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tracing = "0.1"
tracing-subscriber = "0.3"

tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
rustls-native-certs = "0.8"

roxy-shared = { path = "../shared" }
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

h3-webtransport = "0.1.2"

url = "2.5.4"
iter_tools = "0.37"
strum = "0.27"
strum_macros = "0.27"
