[package]
name = "roxy-servers"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

# Http
h3 = { workspace = true }
h3-quinn = { workspace = true }
h3-datagram = { workspace = true }
h3-webtransport = { workspace = true }
quinn = { workspace = true }
http = { workspace = true }
url = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# TLS
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
rustls-native-certs = "0.8"

# Util
itertools = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
bytes = { workspace = true }

# Roxy
roxy-shared = { path = "../shared" }
