[package]
name = "roxy-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dirs = "6.0.0"
once_cell = "1.19"
p12-keystore = "0.2.0"

rustls = { workspace = true }
rcgen = { workspace = true }

tracing = "0.1.37"
tracing-subscriber = "0.3"
time = "0.3.41"
rand = "0.9.1"
rustls-native-certs = "0.8"
http = "1.3.1"
tokio = { version = "1.46.1", features = ["full"] }

pin-project-lite = "0.2.16"
hyper = { version = "1.6.0", features = ["full"] }
bytes = "1.10.1"
futures = "0.3.31"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio-rustls = { workspace = true }
futures-util = "0.3"

webpki-roots = "1.0.2"
tokio-native-tls = { version = "0.3.1" }
native-tls = { version = "0.2", features = ["alpn"] }
openssl = { version = "0.10", features = ["vendored"] }

h3 = { workspace = true }
h3-quinn = { workspace = true }
h3-datagram = { workspace = true }
h3-webtransport = { workspace = true }
quinn = { workspace = true }
web-transport-quinn = { workspace = true }

# Compression
flate2 = "1.0"
brotli = "8.0.1"
zstd = "0.13"


# lru_time_cache = "0.11.11" # TODO: look into this

strum = "0.27"
strum_macros = "0.27"
