[package]
name = "roxy-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# Tls
p12-keystore = "0.2.0"
rustls = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = "1.0.2"
rustls-native-certs = "0.8"
tokio-native-tls = { version = "0.3.1" }
native-tls = { version = "0.2", features = ["alpn"] }

# Http
http = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
h3-datagram = { workspace = true }
h3-webtransport = { workspace = true }
quinn = { workspace = true }
web-transport-quinn = { workspace = true }

# Compression
flate2 = "1.0"
brotli = "8.0.1"
zstd = "0.13"

# Util
rand = "0.9.2"
pin-project-lite = "0.2.16"
bytes = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
chrono = { workspace = true }
time = "0.3.41"
dirs = { workspace = true }
once_cell = { workspace = true }
cow-utils = "0.1.3"

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
