[package]
name = "roxy-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async
tokio = { workspace = true }
futures-util = { workspace = true }

# Tls
p12-keystore = "0.2.0"
rustls = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = "1.0.2"
rustls-native-certs = { workspace = true }
tokio-native-tls = "0.3.1"
native-tls = { version = "0.2.14", features = ["alpn"] }
aws-lc-rs = { workspace = true }

# Http
http = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
h3-datagram = { workspace = true }
h3-webtransport = { workspace = true }
quinn = { workspace = true }
web-transport-quinn = { workspace = true }

# Compression
flate2 = "1.1.2"
brotli = "8.0.2"
zstd = "0.13.3"

# Util
pin-project-lite = "0.2.16"
bytes = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
time = "0.3.43"                     # Required for rcgen
dirs = { workspace = true }
once_cell = { workspace = true }
cow-utils = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
